--- a/IpService/appsettings.json
+++ b/IpService/appsettings.json
@@ -1,6 +1,6 @@
 {
   "IpList": {
-    "WhiteIpList": ["127.0.0.1"] 
+    "WhiteIpList": ["127.0.0.1","::1"] 
   },
   "Logging": {
     "LogLevel": {
